syntax = "proto3";

package auth.v1;

option go_package = "auth/v1;authv1";

service AuthService {
  rpc Register(RegisterRequest) returns (RegisterResponse);
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc Refresh(RefreshRequest) returns (LoginResponse);
  rpc Logout(LogoutRequest) returns (LogoutResponse);
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  string access_token = 1;
  string refresh_token = 2;
}

message RegisterRequest {
  string email = 1;
  string password = 2;
}

message RegisterResponse {}

message RefreshRequest {
  string refresh_token = 1;
}

message LogoutRequest {
  string user_id = 1;
}

message LogoutResponse {}